sudo service mysql stop

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,7 @@ go:
 
 before_script:
   - go get -t
+  - sudo service mysql stop
   - docker-compose up -d
   - waitforit -file=./waitforit.json
 
