--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,8 @@ before_script:
   - go get -t
   - sudo service mysql stop
   - docker-compose up -d
+  - curl -o /usr/local/bin/waitforit -sSL https://github.com/maxcnunes/waitforit/releases/download/v2.4.0/waitforit-linux_amd64
+  - chmod +x /usr/local/bin/waitforit
   - waitforit -file=./waitforit.json
 
 script:
