--- a/.travis.yml
+++ b/.travis.yml
@@ -12,8 +12,8 @@ before_script:
   - go get -t
   - sudo service mysql stop
   - docker-compose up -d
-  - wget -q -O /usr/local/bin/waitforit https://github.com/maxcnunes/waitforit/releases/download/v2.4.0/waitforit-linux_amd64
-  - chmod +x /usr/local/bin/waitforit
+  - wget -q -O ./waitforit https://github.com/maxcnunes/waitforit/releases/download/v2.4.0/waitforit-linux_amd64
+  - chmod +x ./waitforit
   - waitforit -file=./waitforit.json
 
 script:
