--- a/.travis.yml
+++ b/.travis.yml
@@ -14,10 +14,11 @@ before_script:
   - docker-compose up -d
   - wget -q -O ./waitforit https://github.com/maxcnunes/waitforit/releases/download/v2.4.0/waitforit-linux_amd64
   - chmod +x ./waitforit
-  - ./waitforit -file=./waitforit.json
+  - source test.env
+  - waitforit -address tcp://$TRAFFIC_MYSQL_HOST:$TRAFFIC_MYSQL_PORT -timeout 30
+  - waitforit -address tcp://$TRAFFIC_INPUT_HOST:$TRAFFIC_INPUT_PORT -timeout 30
 
 script:
-  - source test.env
   - go test -v -race
 
   - go build -ldflags "-s -w" -o build/package/traffic cmd/traffic/traffic.go
