Use env config in tests

--- a/test.env
+++ b/test.env
@@ -1,11 +1,11 @@
-TRAFFIC_INPUT_HOST=127.0.0.1
-TRAFFIC_INPUT_PORT=5672
-TRAFFIC_INPUT_QUEUE=input
-TRAFFIC_MYSQL_HOST=127.0.0.1
-TRAFFIC_MYSQL_PORT=3306
-TRAFFIC_MYSQL_USERNAME=root
-TRAFFIC_MYSQL_PASSWORD=password
-TRAFFIC_MYSQL_DBNAME=traffic
-TRAFFIC_ROLLBAR_TOKEN=
-TRAFFIC_ROLLBAR_ENVIRONMENT=development
-TRAFFIC_ROLLBAR_PERIOD=1m
+export TRAFFIC_INPUT_HOST=127.0.0.1
+export TRAFFIC_INPUT_PORT=5672
+export TRAFFIC_INPUT_QUEUE=input
+export TRAFFIC_MYSQL_HOST=127.0.0.1
+export TRAFFIC_MYSQL_PORT=3306
+export TRAFFIC_MYSQL_USERNAME=root
+export TRAFFIC_MYSQL_PASSWORD=password
+export TRAFFIC_MYSQL_DBNAME=traffic
+export TRAFFIC_ROLLBAR_TOKEN=
+export TRAFFIC_ROLLBAR_ENVIRONMENT=development
+export TRAFFIC_ROLLBAR_PERIOD=1m
