--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,3 +16,5 @@ services:
     - MYSQL_DATABASE=traffic
     ports:
     - "3306:3306"
+    volumes:
+    - ./docker-entrypoint-initdb.d:/docker-entrypoint-initdb.d
