--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,7 +9,7 @@ services:
     - "15672:15672"
 
   mysql:
-    image: mysql
+    image: mysql:5.7
     container_name: mysql
     environment:
     - MYSQL_ROOT_PASSWORD=password
