--- a/test.env
+++ b/test.env
@@ -1,6 +1,7 @@
-export TRAFFIC_INPUT_HOST=127.0.0.1
-export TRAFFIC_INPUT_PORT=5672
-export TRAFFIC_INPUT_QUEUE=input
+export TRAFFIC_RABBITMQ_HOST=127.0.0.1
+export TRAFFIC_RABBITMQ_PORT=5672
+export TRAFFIC_MONITORING_QUEUE=input
+export TRAFFIC_HOTLINK_QUEUE=hotlink
 export TRAFFIC_MYSQL_HOST=127.0.0.1
 export TRAFFIC_MYSQL_PORT=3306
 export TRAFFIC_MYSQL_USERNAME=root
