--- a/test.env
+++ b/test.env
@@ -10,3 +10,4 @@ export TRAFFIC_MYSQL_DBNAME=traffic
 export TRAFFIC_ROLLBAR_TOKEN=
 export TRAFFIC_ROLLBAR_ENVIRONMENT=development
 export TRAFFIC_ROLLBAR_PERIOD=1m
+export TRAFFIC_HTTP_LISTEN=":80"
