--- a/.travis.yml
+++ b/.travis.yml
@@ -23,7 +23,7 @@ before_script:
 
 script:
   - go test -v -race || travis_terminate 1;
-  - $GOPATH/bin/goveralls -service=travis-ci || travis_terminate 1;
+  - goveralls -service=travis-ci || travis_terminate 1;
 
   - go build -ldflags "-s -w" -o build/package/traffic cmd/traffic/traffic.go || travis_terminate 1;
   - docker build build/package/ -t $DOCKER_REPO || travis_terminate 1;
