--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,14 @@ services:
 go:
   - "1.10"
 
+addons:
+  apt:
+    sources:
+      - mysql-5.7-trusty
+    packages:
+      - mysql-client
+
+
 before_script:
   - mysql --version
   - go get -t
