--- a/.travis.yml
+++ b/.travis.yml
@@ -33,6 +33,7 @@ script:
   - goveralls -service=travis-ci || travis_terminate 1;
 
   - go build -ldflags "-s -w" -o build/package/traffic cmd/traffic/traffic.go || travis_terminate 1;
+  - cp -R migrations build/package/migrations
   - docker build build/package/ -t $DOCKER_REPO || travis_terminate 1;
 
 after_success:
