Migrations in tests

--- a/test.env
+++ b/test.env
@@ -11,3 +11,4 @@ export TRAFFIC_ROLLBAR_TOKEN=
 export TRAFFIC_ROLLBAR_ENVIRONMENT=development
 export TRAFFIC_ROLLBAR_PERIOD=1m
 export TRAFFIC_HTTP_LISTEN=":80"
+export TRAFFIC_MIGRATIONS_DIR=$PWD/migrations
