--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -11,3 +11,5 @@ sonar.exclusions=**/*_test.go,**/vendor/**
 sonar.tests=.
 sonar.test.inclusions=**/*_test.go
 sonar.test.exclusions=**/vendor/**
+
+sonar.go.coverage.reportPaths=cov.out
