--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,5 +1,5 @@
 sonar.projectKey=autowp_traffic
-sonar.projectName=WheelsAge Backend
+sonar.projectName=WheelsAge Traffic
 sonar.organization=autowp-github
 sonar.projectVersion=1.0
 sonar.host.url=https://sonarcloud.io
