--- a/test.env
+++ b/test.env
@@ -2,13 +2,9 @@ export TRAFFIC_RABBITMQ_HOST=127.0.0.1
 export TRAFFIC_RABBITMQ_PORT=5672
 export TRAFFIC_MONITORING_QUEUE=input
 export TRAFFIC_HOTLINK_QUEUE=hotlink
-export TRAFFIC_MYSQL_HOST=127.0.0.1
-export TRAFFIC_MYSQL_PORT=3306
-export TRAFFIC_MYSQL_USERNAME=root
-export TRAFFIC_MYSQL_PASSWORD=password
-export TRAFFIC_MYSQL_DBNAME=traffic
-export TRAFFIC_ROLLBAR_TOKEN=
-export TRAFFIC_ROLLBAR_ENVIRONMENT=development
-export TRAFFIC_ROLLBAR_PERIOD=1m
+export TRAFFIC_MYSQL_DSN="root:password@tcp(127.0.0.1:3306)/traffic?charset=utf8mb4&parseTime=true&loc=UTC"
+export TRAFFIC_SENTRY_DSN=
+export TRAFFIC_SENTRY_ENVIRONMENT=development
 export TRAFFIC_HTTP_LISTEN=":8080"
 export TRAFFIC_MIGRATIONS_DIR=$PWD/migrations
+export TRAFFIC_MIGRATIONS_DSN="mysql://root:password@tcp(127.0.0.1)/traffic?charset=utf8mb4&parseTime=true&loc=UTC"
