--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,12 +8,13 @@ services:
     - "5672:5672"
     - "15672:15672"
 
-  mysql:
-    image: mysql:8
-    container_name: mysql
+  postgres:
+    image: postgres:13
+    container_name: postgres
     environment:
-    - MYSQL_ROOT_PASSWORD=password
-    - MYSQL_DATABASE=traffic
+    - POSTGRES_DB=traffic
+    - POSTGRES_USER=traffic
+    - POSTGRES_PASSWORD=password
     ports:
-    - "3306:3306"
+    - "5432:5432"
 
