--- a/test.env
+++ b/test.env
@@ -1,10 +1,9 @@
-export TRAFFIC_RABBITMQ_HOST=127.0.0.1
-export TRAFFIC_RABBITMQ_PORT=5672
-export TRAFFIC_MONITORING_QUEUE=input
-export TRAFFIC_HOTLINK_QUEUE=hotlink
-export TRAFFIC_MYSQL_DSN="root:password@tcp(127.0.0.1:3306)/traffic?charset=utf8mb4&parseTime=true&loc=UTC"
-export TRAFFIC_SENTRY_DSN=
-export TRAFFIC_SENTRY_ENVIRONMENT=development
-export TRAFFIC_HTTP_LISTEN=":8080"
-export TRAFFIC_MIGRATIONS_DIR=$PWD/migrations
-export TRAFFIC_MIGRATIONS_DSN="mysql://root:password@tcp(127.0.0.1)/traffic?charset=utf8mb4&parseTime=true&loc=UTC"
+TRAFFIC_RABBITMQ_HOST=127.0.0.1
+TRAFFIC_RABBITMQ_PORT=5672
+TRAFFIC_MONITORING_QUEUE=input
+TRAFFIC_POSTGRES_DSN="postgres://traffic:password@127.0.0.1:5432/traffic"
+TRAFFIC_SENTRY_DSN=
+TRAFFIC_SENTRY_ENVIRONMENT=development
+TRAFFIC_HTTP_LISTEN=":8080"
+TRAFFIC_MIGRATIONS_DIR=migrations
+TRAFFIC_MIGRATIONS_DSN="postgres://traffic:password@127.0.0.1/traffic?sslmode=disable"
