--- a/.travis.yml
+++ b/.travis.yml
@@ -26,6 +26,11 @@ env:
 
 install: true
 
+before_install:
+  - sudo sed -i -e '/local.*peer/s/postgres/all/' -e 's/peer\|md5/trust/g' /etc/postgresql/*/main/pg_hba.conf
+  - sudo service postgresql restart
+  - sleep 1
+
 before_script:
   - go mod verify || travis_terminate 1;
   - go get -u github.com/kisielk/errcheck || travis_terminate 1;
@@ -35,10 +40,10 @@ before_script:
   - chmod +x ./waitforit
   - ./waitforit -address tcp://127.0.0.1:5433 -timeout 30 || travis_terminate 1;
   - ./waitforit -address tcp://127.0.0.1:5672 -timeout 30 || travis_terminate 1;
-  - sudo --login postgres psql -c 'CREATE DATABASE traffic;' -U postgres
-  - sudo --login postgres psql -c 'CREATE USER traffic WITH ENCRYPTED PASSWORD 'password';' -U postgres
-  - sudo --login postgres psql -c 'GRANT ALL PRIVILEGES ON DATABASE traffic TO traffic;' -U postgres
-  - sudo --login postgres psql -c 'GRANT ALL PRIVILEGES ON SCHEMA public TO traffic;' -U postgres traffic
+  - psql -c 'CREATE DATABASE traffic;' -U postgres
+  - psql -c 'CREATE USER traffic WITH ENCRYPTED PASSWORD 'password';' -U postgres
+  - psql -c 'GRANT ALL PRIVILEGES ON DATABASE traffic TO traffic;' -U postgres
+  - psql -c 'GRANT ALL PRIVILEGES ON SCHEMA public TO traffic;' -U postgres traffic
 
 script:
   - go test -v -race -coverprofile=cov.out || travis_terminate 1;
