--- a/.travis.yml
+++ b/.travis.yml
@@ -7,29 +7,15 @@ go:
 
 services:
   - rabbitmq
+  - postgresql
 
 addons:
-  postgresql: "13"
-  apt:
-    packages:
-    - postgresql-13
-    - rabbitmq-server
   sonarcloud:
     organization: "autowp-github"
     token:
       secure: $SONARCLOUD_TOKEN
 
-env:
-  global:
-    - PGUSER=postgres
-    - PGPORT=5433
-
 install: true
-
-before_install:
-  - sudo sed -i -e '/local.*peer/s/postgres/all/' -e 's/peer\|md5/trust/g' /etc/postgresql/*/main/pg_hba.conf
-  - sudo service postgresql restart
-  - sleep 1
 
 before_script:
   - go mod verify || travis_terminate 1;
@@ -38,7 +24,7 @@ before_script:
   - errcheck ./... || travis_terminate 1;
   - wget -q -O ./waitforit https://github.com/maxcnunes/waitforit/releases/download/v2.4.1/waitforit-linux_amd64 || travis_terminate 1;
   - chmod +x ./waitforit
-  - ./waitforit -address tcp://127.0.0.1:5433 -timeout 30 || travis_terminate 1;
+  - ./waitforit -address tcp://127.0.0.1:5432 -timeout 30 || travis_terminate 1;
   - ./waitforit -address tcp://127.0.0.1:5672 -timeout 30 || travis_terminate 1;
   - psql -c 'CREATE DATABASE traffic;' -U postgres
   - psql -c 'CREATE USER traffic WITH ENCRYPTED PASSWORD 'password';' -U postgres
