--- a/.travis.yml
+++ b/.travis.yml
@@ -32,12 +32,13 @@ before_script:
   - chmod +x ./waitforit
   - ./waitforit -address tcp://127.0.0.1:5432 -timeout 30 || travis_terminate 1;
   - ./waitforit -address tcp://127.0.0.1:5672 -timeout 30 || travis_terminate 1;
-  - psql -c 'CREATE DATABASE traffic;' -U postgres
-  - psql -c "CREATE USER traffic WITH PASSWORD 'password';" -U postgres
-  - psql -c 'GRANT ALL PRIVILEGES ON DATABASE traffic TO traffic;' -U postgres
-  - psql -c 'GRANT ALL PRIVILEGES ON SCHEMA public TO traffic;' -U postgres traffic
+  - psql -c 'CREATE DATABASE traffic;' -U postgres || travis_terminate 1;
+  - psql -c "CREATE USER traffic WITH PASSWORD 'password';" -U postgres || travis_terminate 1;
+  - psql -c 'GRANT ALL PRIVILEGES ON DATABASE traffic TO traffic;' -U postgres || travis_terminate 1;
+  - psql -c 'GRANT ALL PRIVILEGES ON SCHEMA public TO traffic;' -U postgres traffic || travis_terminate 1;
 
 script:
+  - go test -run TestMigrations || travis_terminate 1;
   - go test -v -race -coverprofile=cov.out || travis_terminate 1;
   - sonar-scanner -Dsonar.login=$SONARCLOUD_TOKEN || true;
   - goveralls -service=travis-ci || travis_terminate 1;
